风控评分卡模型练习

--- a/Seaborn-Tutorial.ipynb
+++ b/Seaborn-Tutorial.ipynb
@@ -1096,7 +1096,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
+   },
    "source": [
     "# 可视化分类变量-`catplot`"
    ]
