--- a/Python-Matplotlib.ipynb
+++ b/Python-Matplotlib.ipynb
@@ -1746,10 +1746,15 @@
     "  + `ListedColormap(colors[, name, N])`，从给定的颜色列表中创建一个映射\n",
     "  + `LinearSegmentedColormap(name, segmentdata[, ...])` ——这个太复杂了，但是可以比上一个类提供更加精细的颜色映射.\n",
     "  \n",
+    "> 这里有个小问题，从 [0,1] 区间 到具体 RGB数值的映射是怎么确定的，我没有查到，目前来看，好像是等距的？？？？\n",
+    "  \n",
     "`matplotlib.cm` 模块实现了对上述两个步骤的封装，它里面有一个类：  \n",
     "`class matplotlib.cm.ScalarMappable(norm=None, cmap=None)`  \n",
     "其中的参数`norm`和`cmap`分别就是上述的`Normalize`对象和`Colormap`对象——这样得到的`ScalarMappable`对象，可以**一口气完成 data -> [0,1]区间 -> RGB或RGBA值 的转换**。\n",
     "  \n",
+    "  \n",
+    "----\n",
+    "\n",
     "\n",
     "下面简单介绍一下两个步骤中`matplotlib.colors`里一些类的用法。\n",
     "+ `Normalize.__init__([vmin, vmax, clip])`  \n",
