--- a/Python-Matplotlib.ipynb
+++ b/Python-Matplotlib.ipynb
@@ -431,14 +431,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 绘制图形的四种代码风格"
+    "## 绘制图形的 5 种代码风格"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ 下面这 4 种绘图风格，由上至下，越来越接近最底层的语法，第三种和第四种基本是一样的，第一种是最简单的，第二种折中。  \n",
+    "+ 下面这 5 种绘图风格，由上至下，越来越接近最底层的语法，第三种和第四种基本是一样的，第一种是最简单的，第二种折中。  \n",
     "  之所以会有这种情况，是因为前两种是出于快速作图的需要，后两种是遵循了python的哲学：“Explicit is better than implicit”。\n",
     "  \n",
     "  \n",
@@ -447,22 +447,28 @@
     "x = np.arange(1, 100)\n",
     "y = np.sqrt(x)\n",
     "\n",
-    "#第一种\n",
+    "#第 1 种\n",
     "plt.plot(x, y)\n",
     "\n",
-    "#第二种\n",
+    "#第 2 种\n",
     "ax = plt.subplot()\n",
     "ax.plot(x, y)\n",
     "\n",
-    "#第三种 ——— 推荐使用\n",
+    "#第 3 种\n",
+    "fig, axes = plt.subplots(111)\n",
+    "axes[0].plot(x,y)\n",
+    "\n",
+    "\n",
+    "#第 4 种 ——— 推荐使用\n",
     "fig1 = plt.figure()\n",
     "new_plot = fig1.add_subplot(111)\n",
     "new_plot.plot(x, y)\n",
     "\n",
-    "#第四种\n",
+    "#第 5 种\n",
     "fig2=plt.figure()\n",
     "new_axes=fig2.add_axes([0,0,1,1])\n",
     "new_axes.plot(x,y)\n",
+    "\n",
     "\n",
     "#各个对象的类型\n",
     "In [15]: type(ax)\n",
@@ -481,9 +487,9 @@
    "metadata": {},
    "source": [
     "+ 总结，**使用面向对象风格创建图形常用的几个函数如下**\n",
-    "  + `ax = fig.add_subplot()` \n",
-    "  + `fig, axes = plt.subplots()` —— 最为推荐\n",
-    "  + `ax = plt.subplot()`"
+    "  + `ax = plt.subplot()`\n",
+    "  + `ax = fig.add_subplot()` —— 推荐\n",
+    "  + `fig, axes = plt.subplots()` —— 最为推荐"
    ]
   },
   {
@@ -2065,7 +2071,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "BaseEnv",
    "language": "python",
    "name": "python3"
   },
@@ -2079,7 +2085,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
