删除不需要的文件

--- a/DataVisualization/Python-Matplotlib.ipynb
+++ b/DataVisualization/Python-Matplotlib.ipynb
@@ -431,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 绘制图形的 5 种代码风格"
+    "## 绘制图形的 5 种代码风格-KEY"
    ]
   },
   {
@@ -451,13 +451,12 @@
     "plt.plot(x, y)\n",
     "\n",
     "#第 2 种\n",
-    "ax = plt.subplot()\n",
+    "ax = plt.subplot() # 它只返回一个Axes对象，不返回Figure对象，不能做更加精细的控制\n",
     "ax.plot(x, y)\n",
     "\n",
-    "#第 3 种\n",
-    "fig, axes = plt.subplots(111)\n",
+    "#第 3 种 —— 绘制多子图时推荐使用\n",
+    "fig, axes = plt.subplots(111)  # 同时返回了Figure对象和Axes对象组成的矩阵\n",
     "axes[0].plot(x,y)\n",
-    "\n",
     "\n",
     "#第 4 种 ——— 推荐使用\n",
     "fig1 = plt.figure()\n",
@@ -724,7 +723,7 @@
     "\n",
     "下面是一些参数的含义：  \n",
     "\n",
-    "+ `fmt`，Format String，用于设置color，marker和line。  \n",
+    "+ `fmt`，Format String，用于设置marker、line和color。  \n",
     "设置的格式顺序是`'[marker][line][color]'`，其中每一个子项都是可选的。\n",
     "  + marker 可以设置为 `.`（普通的点），`o`（实心圆点），`*`（星号点）等等，具体见文档；\n",
     "  + line 可以设置为 `-`（实体线），`--`（虚线），`-.`（dash-dot线）和 `:`（dotted line）这四种；\n",
@@ -2071,9 +2070,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BaseEnv",
+   "display_name": "BaseEnv(3.7.6)",
    "language": "python",
-   "name": "python3"
+   "name": "base-env"
   },
   "language_info": {
    "codemirror_mode": {
