整理合并特征工程相关的文档，并练习SMOTE.

--- a/Practice/04-tensorflow-tutorial.ipynb
+++ b/Practice/04-tensorflow-tutorial.ipynb
@@ -3173,8 +3173,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RNN练习\n",
-    "\n",
+    "# RNN练习"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RNN拟合$sin$函数序列\n",
     "这里展示一个使用RNN拟合$sin$函数的例子"
    ]
   },
