--- a/Practice/08-cluster.ipynb
+++ b/Practice/08-cluster.ipynb
@@ -3499,9 +3499,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:root] *",
+   "display_name": "BaseEnv(3.7.6)",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "base-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3513,7 +3513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
