--- a/Practice/09-decision_tree.ipynb
+++ b/Practice/09-decision_tree.ipynb
@@ -2,13 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package版本信息：\n",
+      "numpy:       1.18.1\n",
+      "pandas:      1.0.1\n",
+      "matplotlib:  3.1.3\n",
+      "sklearn:     0.22.1\n",
+      "seaborn:     0.10.0\n",
+      "plotly:      4.14.1\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import plotly.express as px\n",
+    "from plotly import graph_objects as go\n",
+    "\n",
+    "import matplotlib\n",
+    "import plotly\n",
+    "import sklearn\n",
+    "\n",
+    "from IPython.display import display\n",
+    "\n",
+    "print(\"package版本信息：\")\n",
+    "print(\"numpy:      \", np.__version__)\n",
+    "print(\"pandas:     \", pd.__version__)\n",
+    "print(\"matplotlib: \", matplotlib.__version__)\n",
+    "print(\"sklearn:    \", sklearn.__version__)\n",
+    "print(\"seaborn:    \", sns.__version__)\n",
+    "print(\"plotly:     \", plotly.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sklearn中的决策树"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.tree import DecisionTreeClassifier, export_graphviz,plot_tree\n",
     "from sklearn.datasets import load_wine"
    ]
