--- a/Practice/04-tensorflow-tutorial.ipynb
+++ b/Practice/04-tensorflow-tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,16 +10,19 @@
      "output_type": "stream",
      "text": [
       "TensorFlow version:  1.15.0\n",
-      "numpy version:  1.19.2\n"
+      "numpy version:  1.19.2\n",
+      "pandas version:  1.0.1\n"
      ]
     }
    ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from IPython.display import display\n",
     "print(\"TensorFlow version: \",tf.__version__)\n",
-    "print(\"numpy version: \", np.__version__)"
+    "print(\"numpy version: \", np.__version__)\n",
+    "print(\"pandas version: \", pd.__version__)"
    ]
   },
   {
@@ -1324,6 +1327,214 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## TFRecords\n",
+    "\n",
+    "有关TFRecords的介绍可以参考如下的博客：\n",
+    "1. [Tensorflow Records? What they are and how to use them](https://medium.com/mostly-ai/tensorflow-records-what-they-are-and-how-to-use-them-c46bc4bbb564)-KEY   \n",
+    "这个介绍的最详细\n",
+    "2. [高效读取数据的方法（TFRecord）](https://www.cnblogs.com/wj-1314/p/11211333.html)\n",
+    "\n",
+    "TFRecords是TF中用于存储序列化后二进制数据的格式，它能够高效的提供IO操作。  \n",
+    "构建TFRecords，必须要指定这些序列化数据的格式，这个可以通过 `tf.train.Example` 和 `tf.train.SequenceExample` 两种来实现，这里主要介绍第一个。\n",
+    "\n",
+    "+ `tf.train.Example`不是一个普通的python类，它是一个 protocal buffer，构建一个`Example`，并将其转成 TFRecord 需要如下5个步骤：\n",
+    "  1. 对于每个特征，需要指定这个特征的类型，并且将这个特征的所有值都组织成一个列表，可以选择的取值有如下三种：\n",
+    "    + `tf.train.BytesList`\n",
+    "    + `tf.train.FloatList`\n",
+    "    + `tf.train.Int64List`\n",
+    "  2. 对上一步中每个特征的取值进行封装，使用 `tf.train.Feature`类 封装成一个 `Feature` 对象\n",
+    "  3. 将所有的特征封装成一个特征的集合对象 `tf.train.Features`，\n",
+    "  4. 将特征集合封装成一个 `tf.train.Example` 对象\n",
+    "  5. 将上述的 `Example` 对象通过 `tf.python_io.TFRecordWriter` 进行序列化，写入一个 TFRecord 对象保存。\n",
+    "  \n",
+    "+ 从 TFRecord 文件中读取数据的流程如下：\n",
+    "  1. 使用`tf.TFRecordReader` 读取文件\n",
+    "  2. 根据指定的特征结构抽取信息\n",
+    "  3. 解析出特征"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature_1</th>\n",
+       "      <th>feature_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>c</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   feature_1 feature_2\n",
+       "0          1         a\n",
+       "1          2         b\n",
+       "2          3         c"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 假设要导入的数据如下：\n",
+    "df = pd.DataFrame({'feature_1':[1,2,3], 'feature_2':['a','b','c']})\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "features {\n",
+       "  feature {\n",
+       "    key: \"feature_1\"\n",
+       "    value {\n",
+       "      float_list {\n",
+       "        value: 1.0\n",
+       "        value: 2.0\n",
+       "        value: 3.0\n",
+       "      }\n",
+       "    }\n",
+       "  }\n",
+       "  feature {\n",
+       "    key: \"feature_2\"\n",
+       "    value {\n",
+       "      bytes_list {\n",
+       "        value: \"a\"\n",
+       "        value: \"b\"\n",
+       "        value: \"c\"\n",
+       "      }\n",
+       "    }\n",
+       "  }\n",
+       "}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 分别定义每个特征的类型，并将每个特征的取值转成一个list\n",
+    "feature_1_list = tf.train.FloatList(value=df['feature_1'])\n",
+    "# 注意，str类型必须要先使用 str.encode() 方法获得对应的二进制编码\n",
+    "feature_2_list = tf.train.BytesList(value=df['feature_2'].apply(str.encode)) \n",
+    "\n",
+    "# 构造一个字典对象\n",
+    "features_dict = {}\n",
+    "features_dict['feature_1'] = tf.train.Feature(float_list=feature_1_list)\n",
+    "features_dict['feature_2'] = tf.train.Feature(bytes_list=feature_2_list)\n",
+    "\n",
+    "# 使用上述得到的字典形式的特征集合，构造 Features 对象\n",
+    "features = tf.train.Features(feature=features_dict)\n",
+    "\n",
+    "# 使用 Features 对象构造 Example\n",
+    "feature_example = tf.train.Example(features=features)\n",
+    "feature_example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 然后调用 Example 对象的序列化方法，写入 TFRecord\n",
+    "with tf.python_io.TFRecordWriter('test_data.tfrecord') as writer:\n",
+    "    writer.write(feature_example.SerializeToString())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Value passed to parameter 'dense_defaults' has DataType float64 not in list of allowed values: float32, int64, string",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-39-d17e0236b457>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m }\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mread_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparse_single_example\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mserialized\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mserialized_example\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mread_features\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mC:\\MyProgramFiles\\Anaconda\\envs\\tensorflow1.15\\lib\\site-packages\\tensorflow_core\\python\\ops\\parsing_ops.py\u001b[0m in \u001b[0;36mparse_single_example\u001b[1;34m(serialized, features, name, example_names)\u001b[0m\n\u001b[0;32m   1017\u001b[0m   \"\"\"\n\u001b[0;32m   1018\u001b[0m   return parse_single_example_v2_unoptimized(\n\u001b[1;32m-> 1019\u001b[1;33m       \u001b[0mserialized\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexample_names\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1020\u001b[0m       )\n\u001b[0;32m   1021\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\MyProgramFiles\\Anaconda\\envs\\tensorflow1.15\\lib\\site-packages\\tensorflow_core\\python\\ops\\parsing_ops.py\u001b[0m in \u001b[0;36mparse_single_example_v2_unoptimized\u001b[1;34m(serialized, features, example_names, name)\u001b[0m\n\u001b[0;32m   1061\u001b[0m     \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Missing features.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1062\u001b[0m   \u001b[1;32mif\u001b[0m \u001b[0mexample_names\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1063\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mparse_single_example_v2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mserialized\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1064\u001b[0m   \u001b[0mfeatures\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_prepend_none_dimension\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1065\u001b[0m   (sparse_keys, sparse_types, dense_keys, dense_types, dense_defaults,\n",
+      "\u001b[1;32mC:\\MyProgramFiles\\Anaconda\\envs\\tensorflow1.15\\lib\\site-packages\\tensorflow_core\\python\\ops\\parsing_ops.py\u001b[0m in \u001b[0;36mparse_single_example_v2\u001b[1;34m(serialized, features, name)\u001b[0m\n\u001b[0;32m   2091\u001b[0m   outputs = _parse_single_example_v2_raw(serialized, sparse_keys, sparse_types,\n\u001b[0;32m   2092\u001b[0m                                          \u001b[0mdense_keys\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdense_types\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2093\u001b[1;33m                                          dense_defaults, dense_shapes, name)\n\u001b[0m\u001b[0;32m   2094\u001b[0m   \u001b[1;32mreturn\u001b[0m \u001b[0m_construct_sparse_tensors_for_sparse_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moutputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2095\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\MyProgramFiles\\Anaconda\\envs\\tensorflow1.15\\lib\\site-packages\\tensorflow_core\\python\\ops\\parsing_ops.py\u001b[0m in \u001b[0;36m_parse_single_example_v2_raw\u001b[1;34m(serialized, sparse_keys, sparse_types, dense_keys, dense_types, dense_defaults, dense_shapes, name)\u001b[0m\n\u001b[0;32m   2208\u001b[0m         \u001b[0mdense_keys\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdense_keys\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2209\u001b[0m         \u001b[0mdense_shapes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdense_shapes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2210\u001b[1;33m         name=name)\n\u001b[0m\u001b[0;32m   2211\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2212\u001b[0m     \u001b[1;33m(\u001b[0m\u001b[0msparse_indices\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msparse_values\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msparse_shapes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdense_values\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0moutputs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\MyProgramFiles\\Anaconda\\envs\\tensorflow1.15\\lib\\site-packages\\tensorflow_core\\python\\ops\\gen_parsing_ops.py\u001b[0m in \u001b[0;36mparse_single_example\u001b[1;34m(serialized, dense_defaults, num_sparse, sparse_keys, dense_keys, sparse_types, dense_shapes, name)\u001b[0m\n\u001b[0;32m   1199\u001b[0m                               \u001b[0mdense_keys\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdense_keys\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1200\u001b[0m                               \u001b[0msparse_types\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msparse_types\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1201\u001b[1;33m                               dense_shapes=dense_shapes, name=name)\n\u001b[0m\u001b[0;32m   1202\u001b[0m   \u001b[0m_result\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_op\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1203\u001b[0m   \u001b[0m_inputs_flat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_op\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\MyProgramFiles\\Anaconda\\envs\\tensorflow1.15\\lib\\site-packages\\tensorflow_core\\python\\framework\\op_def_library.py\u001b[0m in \u001b[0;36m_apply_op_helper\u001b[1;34m(self, op_type_name, name, **keywords)\u001b[0m\n\u001b[0;32m    650\u001b[0m               _SatisfiesTypeConstraint(base_type,\n\u001b[0;32m    651\u001b[0m                                        \u001b[0m_Attr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mop_def\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput_arg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtype_list_attr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 652\u001b[1;33m                                        param_name=input_name)\n\u001b[0m\u001b[0;32m    653\u001b[0m             \u001b[0mattrs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0minput_arg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtype_list_attr\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mattr_value\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    654\u001b[0m             \u001b[0minferred_from\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0minput_arg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtype_list_attr\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput_name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\MyProgramFiles\\Anaconda\\envs\\tensorflow1.15\\lib\\site-packages\\tensorflow_core\\python\\framework\\op_def_library.py\u001b[0m in \u001b[0;36m_SatisfiesTypeConstraint\u001b[1;34m(dtype, attr_def, param_name)\u001b[0m\n\u001b[0;32m     59\u001b[0m           \u001b[1;34m\"allowed values: %s\"\u001b[0m \u001b[1;33m%\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m           (param_name, dtypes.as_dtype(dtype).name,\n\u001b[1;32m---> 61\u001b[1;33m            \", \".join(dtypes.as_dtype(x).name for x in allowed_list)))\n\u001b[0m\u001b[0;32m     62\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: Value passed to parameter 'dense_defaults' has DataType float64 not in list of allowed values: float32, int64, string"
+     ]
+    }
+   ],
+   "source": [
+    "# 读取 TFRecord 文件\n",
+    "reader = tf.TFRecordReader()\n",
+    "filename_queue = tf.train.string_input_producer(['test_data.tfrecord'])\n",
+    "_, serialized_example = reader.read(filename_queue)\n",
+    "\n",
+    "read_features = {\n",
+    "    'feature_1': tf.FixedLenFeature([], tf.float64),\n",
+    "    'feature_2': tf.FixedLenFeature([], tf.string)\n",
+    "}\n",
+    "\n",
+    "read_data = tf.parse_single_example(serialized=serialized_example, features=read_features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Dataset\n",
     "\n",
     "[`tf.data`](https://www.tensorflow.org/versions/r1.15/api_docs/python/tf/data)模块提供了用于封装数据输入的功能。  \n",
@@ -1352,6 +1563,24 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Estimator\n",
+    "\n",
+    "+ 详细见如下博客\n",
+    "  1. [Introduction to Tensorflow Estimators](https://medium.com/learning-machine-learning/introduction-to-tensorflow-estimators-part-1-39f9eb666bc7)\n",
+    "  2. [TensorFlow之estimator详解](TensorFlow之estimator详解)"
    ]
   },
   {
